recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:11: error: not found: value doite
  	doite(90)
        ^